feat: add app deployment action and guard